@@ -7,11 +7,13 @@ using BenBurgers.InternationalStandards.Iso.EFCore.SqlServer.Exceptions;
 using BenBurgers.InternationalStandards.Iso.EFCore.SqlServer.Infrastructure;
 using BenBurgers.InternationalStandards.Iso.EFCore.SqlServer.Migrations.Operations;
 using BenBurgers.InternationalStandards.Iso.Iso639;
+using Microsoft.EntityFrameworkCore.ChangeTracking.Internal;
 using Microsoft.EntityFrameworkCore.Metadata;
 using Microsoft.EntityFrameworkCore.Migrations;
 using Microsoft.EntityFrameworkCore.Migrations.Internal;
 using Microsoft.EntityFrameworkCore.Migrations.Operations;
 using Microsoft.EntityFrameworkCore.Storage;
+using Microsoft.EntityFrameworkCore.Update;
 using Microsoft.EntityFrameworkCore.Update.Internal;
 using System.Diagnostics.CodeAnalysis;
 
@@ -23,6 +25,27 @@ namespace BenBurgers.InternationalStandards.Iso.EFCore.SqlServer.Iso639.Migratio
 [SuppressMessage("Usage", "EF1001:Internal EF Core API usage.", Justification = "Enhancement of EF Core API.")]
 internal sealed class Iso639MigrationsModelDiffer : MigrationsModelDiffer
 {
+#if NET6_0
+    /// <summary>
+    /// Initializes a new instance of <see cref="Iso639MigrationsModelDiffer" />.
+    /// </summary>
+    /// <param name="typeMappingSource">
+    /// The type mapping source.
+    /// </param>
+    /// <param name="migrationsAnnotationProvider">
+    /// The migrations annotation provider.
+    /// </param>
+    /// <param name="changeDetector">
+    /// The change detector.
+    /// </param>
+    /// <param name="updateAdapterFactory">
+    /// The update adapter factory.
+    /// </param>
+    /// <param name="commandBatchPreparerDependencies">
+    /// The command batch preparer dependencies.
+    /// </param>
+#endif
+#if NET7_0_OR_GREATER
     /// <summary>
     /// Initializes a new instance of <see cref="Iso639MigrationsModelDiffer" />.
     /// </summary>
@@ -38,12 +61,29 @@ internal sealed class Iso639MigrationsModelDiffer : MigrationsModelDiffer
     /// <param name="commandBatchPreparerDependencies">
     /// The command batch preparer dependencies.
     /// </param>
+#endif
     public Iso639MigrationsModelDiffer(
         IRelationalTypeMappingSource typeMappingSource,
         IMigrationsAnnotationProvider migrationsAnnotationProvider,
+#if NET6_0
+        IChangeDetector changeDetector,
+        IUpdateAdapterFactory updateAdapterFactory,
+#endif
+#if NET7_0_OR_GREATER
         IRowIdentityMapFactory rowIdentityMapFactory,
+#endif
         CommandBatchPreparerDependencies commandBatchPreparerDependencies)
-        : base(typeMappingSource, migrationsAnnotationProvider, rowIdentityMapFactory, commandBatchPreparerDependencies)
+        : base(
+            typeMappingSource,
+            migrationsAnnotationProvider,
+#if NET6_0
+            changeDetector,
+            updateAdapterFactory,
+#endif
+#if NET7_0_OR_GREATER
+            rowIdentityMapFactory,
+#endif
+            commandBatchPreparerDependencies)
     {
     }
 
